--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Replit user <<>>"]
 python = "^3.10"
 Flask = "^2.3.2"
 SQLAlchemy = "^2.0.12"
+Flask-Dance = "^7.0.0"
 
 [tool.poetry.dev-dependencies]
 
